# intempus-test

./: .gitignore  README.md  add_project_to_A.py  add_project_to_B.py  add_project_to_db.py  config.py  data.py  main.py  pyproject.toml  run.py  shared.py  test_main.py  test_shared.py  update.py
data/: 9611850_A_data.json  9611850_B_data.json  9612053_A_data.json  9612053_B_data.json  9612054_A_data.json  9612054_B_data.json  CreateProjectsTable.sql  data.json.bak  data2.json.bak  db_data_to_prj.json  diff_upd_case.json  extras.py  initial.json  initial_upd_case.json  params_updated_after_add.json  payload_add.json  prj_data_from_db.json  project_add.json  result.json  update.json
